# quecksilber

./: .gitignore  Cargo.toml
.claude/: settings.json
.github/workflows/: deploy.yml  pages.yml
examples/: demo.rs  screenshots.rs
quecksilber/: Cargo.toml
quecksilber-demo/: Cargo.toml  index.html
quecksilber-demo/src/: main.rs  random_walk.rs
quecksilber-screenshot/: Cargo.toml
quecksilber-screenshot/src/: main.rs
quecksilber/src/: lib.rs  themes.rs
quecksilber/src/widgets/: attitude_indicator.rs  attitude_rate_indicator.rs  circle.rs  dual_gauge.rs  gauge.rs  horizontal_gauge.rs  lever_switch.rs  mod.rs  rotary_selector.rs
reference/: INDEX.md
src/: anim.rs  async_action_button.rs  attitude_indicator.rs  color.rs  draw.rs  event_timer.rs  gauge.rs  guarded_button.rs  indicator.rs  indicator_panel.rs  lib.rs  selector_dial.rs  status_bar.rs  theme.rs  toggle_switch.rs
web/: Cargo.toml  index.html
web/src/: main.rs
