[package]
name = "quecksilber-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["canvas"] }
quecksilber = { path = "../quecksilber" }
rand = "0.9"

[features]
default = ["native"]
native = ["iced/tokio"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
